# signal_synth_saas

./: .gitignore  CMakeLists.txt  README.md  WOW.md
.github/workflows/: ci.yml
apache/: syn_sig_ra.conf.example
doc/: API_GUIDE.md  CODEX_API_CLIENT_GUIDE.md  CODEX_APPROVAL_WORKFLOWS.md  CUSTOM_PACKS.md  DEVELOPER_REFERENCE.md  MCP_SERVER.md  OPERATIONS.md  PACK_CATALOG.md  PRIVACY_NO_PHI_NOTICE.md  PRIVATE_BETA_SUPPORT.md  PRIVATE_BETA_TERMS.md  PRODUCT_CAPABILITIES.md  RETENTION_BACKUP.md  SAAS_CODEX_HANDOFF_2026_07_06.md  SAAS_PRODUCT_PLAN.md  SCENARIO_DRAFTS.md  SECRET_ROTATION.md  SECURITY_BASELINE.md  TENANCY.md  UX_AUDIT_2026_07_10.md  VPS_DEPLOYMENT.md  openapi.yaml  per_case_verdicts.md  signal_synth_saas_CODEX_TASKS.md  synsigra_report_improvements.md  synsigra_report_improvements_v2.md  synsigra_truth_policy_issues.md
doc/20260724_user_suggestions/: local_verify_patched.py  measurements_patched.py  per_case_verdicts_patched.md
include/syn_sig_ra/: api_key_auth.h  artifact_store.h  build_info.h.in  core_contract.h  job_request.h  mcp_server.h  metadata_store.h  openapi_document.h.in  pack_catalog.h  password_auth.h  random_id.h  route.h  runtime_config.h  sha256.h  signal_viewer.h  transactional_email.h  viewer_assets.h.in  worker.h
ops/apache/: synsigra-apache22.logrotate
ops/letsencrypt/: reload-nginx.sh
ops/mail/: README.md  configure_gmail_smtp.sh  verify_gmail_smtp.sh
ops/nginx/: timeonion.conf
ops/systemd/: syn_sig_ra_worker.service
packs/: advanced_rhythm_burden_v1.json  cardiorespiratory_v1.json  combined_worst_case_v1.json  combined_worst_case_v1.product  curated_pack_metadata_v1.catalog  ecg_beat_classification_v1.json  ecg_beat_classification_v1.product  ecg_delineation_v2.json  ecg_extended_morphology_v1.json  ecg_hybrid_noise_v1.json  ecg_morphology_stress_v1.json  ecg_morphology_stress_v1.product  ecg_qtc_verification_v1.json  ecg_qtc_verification_v1_expectations.json  ecg_rhythm_v1.json  ecg_rhythm_v1.product  hrv_robustness_v2.json  hrv_robustness_v2_expectations.json  hrv_v1.json  hrv_v1.product  ppg_alignment_v1.json  ppg_alignment_v1.product  ppg_benchmark_v1.json  ppg_benchmark_v1.product  ppg_optical_v2.json  r_peak_noise_frontier_v1.json  r_peak_noise_frontier_v1_expectations.json  r_peak_rr_noise_v1.json  r_peak_rr_noise_v1_expectations.json  r_peak_rr_simple_stress_v1.json  r_peak_rr_simple_stress_v1_expectations.json  r_peak_rr_snr_ladder_v1.json  r_peak_rr_snr_ladder_v1_expectations.json  r_peak_stress_v1.json  r_peak_stress_v1.product  r_peak_stress_v1_expectations.json  signal_quality_v1.json  signal_quality_v1.product  wearable_stress_v1.json  wearable_stress_v1.product  (+1 more)
packs/noise_assets/: synsigra_project_noise_v1.csv
packs/scenarios/: ecg_artifact_signal_quality.json  ppg_arrhythmia_pulse_loss_v4.json  ppg_dropout_saturation_v4.json  ppg_motion_accelerometer_v4.json  ppg_multichannel_optical_v6.json  ppg_perfusion_drop_v4.json  ppg_respiratory_modulation_v4.json  ppg_variable_ptt_v4.json  ppg_weak_missing_v4.json
packs/scenarios/catalog/: beat_pac_periodic.json  beat_paced_capture.json  beat_paced_non_capture.json  beat_pvc_periodic.json  morph_clbbb.json  morph_imi.json  morph_iscal.json  morph_lvh.json  rhythm_afib.json  rhythm_flutter_variable.json  rhythm_mobitz_ii_pause.json  rhythm_pac_trigeminy.json  rhythm_psvt_episode.json  rhythm_pvc_bigeminy.json  rhythm_svt.json
packs/scenarios/hrv/: hrv_artifact_contamination.json  hrv_balanced_lf_hf.json  hrv_baseline_wander_stress.json  hrv_clean_baseline.json  hrv_drift_dropout_stress.json  hrv_ectopic_contamination.json  hrv_hf_dominant.json  hrv_high_variability.json  hrv_lf_dominant.json  hrv_mild_variability.json  hrv_powerline_emg_stress.json  hrv_respiratory_variation.json  hrv_vlf_dominant.json
packs/scenarios/packs/: cardiorespiratory_clean_v4.json  cardiorespiratory_ptt_variation_v4.json  cardiorespiratory_pulse_loss_motion_v4.json  combined_ecg_ppg_quality.json  dynamic_repolarization_long_qt_v3.json  ecg_extended_qrs_components_v7.json  ecg_extended_wave_components_v7.json  ecg_fusion_beats_v7.json  ecg_hybrid_noise_v8.json  ppg_delay_180.json  ppg_delay_260.json  ppg_optical_desaturation_v6.json  ppg_optical_interference_v6.json  ppg_optical_low_perfusion_v6.json  qtc_bazett_brady_45_v3.json  qtc_bazett_tachy_120_v3.json  qtc_fixed_normal_60_v3.json  qtc_framingham_brady_45_v3.json  qtc_hodges_brady_45_v3.json  (+49 more)
scripts/: adopt_core_release.py  backfill_viewer_sources.sh  backup_live.sh  build_release.sh  build_release_artifact.sh  build_verifier_downloads.sh  challenge_artifact.py  cleanup_retention.sh  commit_checked.sh  compact_artifacts.sh  customer_smoke.py  deploy_live.sh  deploy_release.sh  dev_run_worker_once.sh  import_curated_release_set.py  promote_core_release.py  prune_release_history.sh  release_runtime.sh  reset_prebeta_state.sh  restore_drill.sh  rollback_live.sh  stress_live_packs.py  task1_tipusp_dolgok.py  task2_release_dolgok.py  task3_mail_dolgok.py  verify_downloaded_package.py  verify_live.sh  verify_release_artifact.sh  verify_viewer_live.sh
scripts/mail/: README.md  install_local_mta.sh  verify_local_mta.sh
src/: mod_syn_sig_ra.cpp
src/admin/: main.cpp
src/api/: mcp_server.cpp  route.cpp
src/artifact/: artifact_store.cpp
src/auth/: api_key_auth.cpp  password_auth.cpp  sha256.cpp
src/catalog/: pack_catalog.cpp
src/config/: runtime_config.cpp
src/email/: transactional_email.cpp
src/integration/: core_contract.cpp
src/job/: job_request.cpp  random_id.cpp
src/storage/: metadata_store.cpp
src/viewer/: signal_viewer.cpp
src/worker/: main.cpp  worker.cpp
test/: module_symbol_test.cmake  user_facing_brand_test.sh
test/integration/: e2e_smoke.sh
test/unit/: api_key_auth_test.cpp  artifact_delivery_test.cpp  core_contract_test.cpp  job_test.cpp  mcp_server_test.cpp  metadata_schema_test.cpp  pack_catalog_test.cpp  route_test.cpp  runtime_config_test.cpp  signal_viewer_test.cpp  viewer_client_test.js  worker_test.cpp
var.example/: README.md
web/viewer/: app.js  index.html  signal-viewer.js  style.css
